Changed th clouds position

--- a/index.css
+++ b/index.css
@@ -263,12 +263,14 @@ footer{
         overflow-x: hidden;
     }
 }
+  /* Z index for the the clouds to behind the text and images */
 @media screen and (max-width: 1600px) {
     .cloud1{
         /* width: 30vw; */
         top: 45vh;
         left: 20vw;
         position: absolute;
+        z-index: -1;
         /* background-image: url(https://web.archive.org/web/20180901170713im_/http:/seanhalpin.io/assets/img/ui/cloud.svg); */
     }
     .cloud2{
@@ -276,6 +278,7 @@ footer{
         top: 23vh;
         left: 66vw;
         position: absolute;
+        z-index: -1;
         /* background-image: url(https://web.archive.org/web/20180901170713im_/http:/seanhalpin.io/assets/img/ui/cloud.svg); */
     }
     .nav{
