--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -228,14 +228,18 @@ a{
 }
 .msgme > img{
     width: 29px;
-    padding: 0.5vw 0.5vw;
-    opacity: 30%;
+    /* padding: 0.5vw 0.5vw; */
+    /* opacity: 30%; */
+    background-color: white;
+    margin-right: 1%;
+    border-radius: 2px;
 }
 .msgme > p{
-    opacity: 30%;
+    /* opacity: 30%; */
     text-decoration: none;
     font-size: 1.2rem;
-    color: black;
+    color: white;
+    margin-left: 1%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     white-space: nowrap;
 }
