--- a/index.css
+++ b/index.css
@@ -203,7 +203,9 @@ hr{
 }
 .msgme{
     transition: background-color 0.3s;
-    background-color: #45b39a;
+    background-color: #7cd9c4;
+    
+    font-weight: 700;
     height: 4vh;
     display: flex;
     justify-content: center;
@@ -212,7 +214,7 @@ hr{
     margin: 0px 44vw;
     border-radius: 0.2vw;
     text-decoration: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     overflow: hidden;
     width: auto;
     
@@ -227,13 +229,14 @@ a{
 .msgme > img{
     width: 29px;
     padding: 0.5vw 0.5vw;
-    opacity: 30%;
+    color: #d5efe9;
+
 }
 .msgme > p{
-    opacity: 30%;
+    
     text-decoration: none;
     font-size: 1.2rem;
-    color: black;
+    color: #034a39;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     white-space: nowrap;
 }
