--- a/index.css
+++ b/index.css
@@ -204,6 +204,7 @@ hr{
 .msgme{
     transition: background-color 0.3s;
     background-color: #45b39a;
+    /* background-color: #62c8ff; */
     height: 4vh;
     display: flex;
     justify-content: center;
@@ -218,7 +219,8 @@ hr{
     
 }
 .msgme:hover{
-    background-color: #378f7a;
+    background-color: #92ffe0;
+    /* background-color: rgb(255, 199, 125); */
 }
 a{
     text-decoration: none;
@@ -236,6 +238,7 @@ a{
     color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     white-space: nowrap;
+    font-weight: 1000;
 }
 footer{
     text-decoration: none;
