--- a/index.css
+++ b/index.css
@@ -214,8 +214,7 @@ hr{
     text-decoration: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     overflow: hidden;
-    width: auto;
-    
+    width: auto;   
 }
 .msgme:hover{
     background-color: #378f7a;
@@ -227,15 +226,19 @@ a{
 .msgme > img{
     width: 29px;
     padding: 0.5vw 0.5vw;
-    opacity: 30%;
+    opacity: 90%;
 }
 .msgme > p{
-    opacity: 30%;
+    opacity: 80%;
     text-decoration: none;
     font-size: 1.2rem;
     color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     white-space: nowrap;
+    font-weight: 500;
+}
+.msgme > p:hover{
+    color: white;
 }
 footer{
     text-decoration: none;
