--- a/index.css
+++ b/index.css
@@ -203,7 +203,10 @@ hr{
 }
 .msgme{
     transition: background-color 0.3s;
-    background-color: #45b39a;
+
+    background-color: #6bceb7;
+    font-weight: bold;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     height: 4vh;
     display: flex;
     justify-content: center;
@@ -233,7 +236,7 @@ a{
     opacity: 30%;
     text-decoration: none;
     font-size: 1.2rem;
-    color: black;
+    color: rgb(0, 0, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     white-space: nowrap;
 }
