--- a/index.css
+++ b/index.css
@@ -227,14 +227,14 @@ a{
 .msgme > img{
     width: 29px;
     padding: 0.5vw 0.5vw;
-    opacity: 30%;
+    opacity: 60%;
 }
 .msgme > p{
-    opacity: 30%;
+    opacity: 100%;
     text-decoration: none;
     font-size: 1.2rem;
-    color: black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(255, 255, 255);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     white-space: nowrap;
 }
 footer{
