--- a/index.css
+++ b/index.css
@@ -202,8 +202,8 @@ hr{
     transition: font-size 0.3s;
 }
 .msgme{
-    transition: background-color 0.3s;
-    background-color: #45b39a;
+    transition: 0.3s;
+    background-color: #9bd5c7;
     height: 4vh;
     display: flex;
     justify-content: center;
@@ -214,11 +214,12 @@ hr{
     text-decoration: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     overflow: hidden;
-    width: auto;
+    width: 10%;
     
 }
 .msgme:hover{
-    background-color: #378f7a;
+    background-color: rgb(11, 241, 187);
+    transform: scale(1.1);
 }
 a{
     text-decoration: none;
@@ -227,13 +228,14 @@ a{
 .msgme > img{
     width: 29px;
     padding: 0.5vw 0.5vw;
-    opacity: 30%;
+    opacity: 60%;
 }
 .msgme > p{
-    opacity: 30%;
+    opacity: 80%;
     text-decoration: none;
     font-size: 1.2rem;
-    color: black;
+    font-weight: 550;
+    color: rgb(6, 67, 44);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     white-space: nowrap;
 }
